--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,23 +2,21 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:orientation="vertical">
 
 
     <ImageView
         android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:layout_marginBottom="0dp"
-        android:paddingBottom="0dp"
-        android:src="@drawable/faces_rotated_blured_cropped_vol2"
+        android:src="@drawable/faces_blured_cropped"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 
@@ -26,9 +24,9 @@
         android:id="@+id/btnSelectPhoto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
         android:height="70dp"
         android:text="@string/select_button"
         android:textSize="16sp"
@@ -50,15 +48,15 @@
     <!--app:layout_constraintVertical_bias="0.0" />-->
 
     <!--<ImageView-->
-        <!--android:id="@+id/imageViewGif"-->
-        <!--android:layout_width="100dp"-->
-        <!--android:layout_height="100dp"-->
-        <!--android:scaleType="fitCenter"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintHorizontal_bias="0.0"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:srcCompat="@drawable/hourglass_cropped" />-->
+    <!--android:id="@+id/imageViewGif"-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="100dp"-->
+    <!--android:scaleType="fitCenter"-->
+    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintHorizontal_bias="0.0"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:srcCompat="@drawable/hourglass_cropped" />-->
 
 
     <android.support.constraint.Guideline
@@ -73,16 +71,13 @@
         android:id="@+id/happyImageView"
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:src="@drawable/happy_emoji"
         app:layout_constraintBottom_toTopOf="@+id/neutralImageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal"
-        android:src="@drawable/happy_emoji" />
+        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />
 
     <ImageView
         android:id="@+id/neutralImageView"
@@ -90,30 +85,45 @@
         android:layout_height="140dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/neutral_emoji"
         app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
         app:layout_constraintEnd_toEndOf="@+id/happyImageView"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/happyImageView"
-        app:layout_constraintTop_toBottomOf="@+id/happyImageView"
-        android:src="@drawable/neutral_emoji" />
+        app:layout_constraintTop_toBottomOf="@+id/happyImageView" />
 
     <ImageView
         android:id="@+id/arrowUpImageView"
         android:layout_width="40dp"
         android:layout_height="80dp"
+        android:src="@drawable/arrow_up"
         app:layout_constraintBottom_toBottomOf="@+id/neutralImageView"
         app:layout_constraintStart_toEndOf="@+id/happyImageView"
-        app:layout_constraintTop_toTopOf="@+id/happyImageView"
-        android:src="@drawable/arrow_up" />
+        app:layout_constraintTop_toTopOf="@+id/happyImageView" />
 
     <ImageView
         android:id="@+id/arrowDownImageView"
         android:layout_width="45dp"
         android:layout_height="90dp"
+        android:src="@drawable/arrow_down"
         app:layout_constraintBottom_toBottomOf="@+id/neutralImageView"
         app:layout_constraintEnd_toStartOf="@+id/happyImageView"
-        app:layout_constraintTop_toTopOf="@+id/happyImageView"
-        android:src="@drawable/arrow_down" />
+        app:layout_constraintTop_toTopOf="@+id/happyImageView" />
+
+
+    <ImageView
+        android:id="@+id/emptyImageView"
+        android:layout_width="180dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:src="@drawable/empty"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />
+
 
 
     <android.support.constraint.Guideline
@@ -122,7 +132,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.9" />
-
 
 
 </android.support.constraint.ConstraintLayout>
